--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
-html{
+html {
   scrollbar-color: purple rgb(181, 61, 225);
 }
-
-
-.gradient-background {
-  background: linear-gradient(254deg, #b4a87a, #a342e4);
+body {
+  background: linear-gradient(254deg, #dbbe49, #a342e4);
   background-size: 120% 120%;
-  animation: gradient-animation 12s ease infinite;
+
+  animation: gradient-animation 8s ease infinite;
+}
+.gradient-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  background: linear-gradient(254deg, #dbbe49, #a342e4);
+  background-size: 120% 120%;
+
+  animation: gradient-animation 8s ease infinite;
 }
 
 @keyframes gradient-animation {
@@ -20,19 +31,48 @@ html{
     background-position: 0% 50%;
   }
 }
+.background-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url("SF_101_How-James-Brown-Invented-Funk_PBSLearning_THUMB.png");
+  background-size: 90%;
+}
+.overlay {
+  width: 100%;
+  position: absolute;
+  margin-top: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  overflow-y: hidden;
+}
+h2 {
+  text-align: end;
 
+  margin-right: 100px;
+  font-family: Poppins;
+  font-weight: 700;
+  color: darkslategray;
+  text-shadow: 2px 5px rgb(33, 40, 40);
+  font-size: 33px;
+  letter-spacing: 2px;
+}
 h1 {
-  overlay: auto;
   font-family: Lobster;
-  font-size: 140px;
+  font-size: 160px;
   color: rgb(128, 96, 14);
   text-shadow: 6px 4px #651b79;
-  background-color: rgba(98, 83, 107, 0.2);
-  width: fit-content;
-  padding: 60px;
-  border-radius: 333px 0px;
-  border: 3px solid darkslategray;
-  box-shadow: rgb(133, 110, 53) 30px 30px 80px 80px;
+
+  margin-left: 20px;
+  padding: 20px;
+  border-radius: 300px 0px;
+
+  box-shadow: 8px 22px darkslategray;
   animation: glitter 3s alternate-reverse infinite;
 }
 @keyframes glitter {
@@ -46,4 +86,44 @@ h1 {
   100% {
     text-shadow: 0 0 20px rgb(241, 187, 48), 0 0 16px rgb(241, 187, 48);
   }
+}
+h3 {
+  color: darkslategray;
+  text-shadow: 1px 2px rgb(40, 57, 57);
+  font-family: Poppins;
+  font-weight: 700;
+  text-align: center;
+  margin-top: -60px;
+}
+h3 a {
+  text-decoration: none;
+  color: #791b73;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+h3 a:hover {
+  color: #b69823;
+}
+p {
+
+  padding: 60px;
+  font-family: Poppins;
+  font-weight: 500;
+}
+.container {
+  display: grid;
+  width: 100%;
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.giphy-embed {
+  margin-left: auto;
+  margin-right: auto;
+}
+.valagala {
+  margin-bottom: -10px;
+}
+footer {
+  z-index: 3;
+  text-align: center;
 }
