--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   background: linear-gradient(254deg, #dbbe49, #a342e4);
   background-size: 120% 120%;
 
-  animation: gradient-animation 8s ease infinite;
+  animation: gradient-animation 12s ease infinite;
 }
 
 @keyframes gradient-animation {
@@ -44,7 +44,7 @@ body {
 .overlay {
   width: 100%;
   position: absolute;
-  margin-top: 300px;
+  margin-top: 860px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -52,29 +52,39 @@ body {
   overflow-y: hidden;
 }
 h2 {
+  animation: glitter 3s alternate-reverse infinite,
+    outer-left 2s 1s cubic-bezier(0.5, 0, 0.1, 1) both;
   text-align: end;
-
   margin-right: 100px;
   font-family: Poppins;
   font-weight: 700;
-  color: darkslategray;
+  color: rgb(218, 204, 166);
   text-shadow: 2px 5px rgb(33, 40, 40);
   font-size: 33px;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
+}
+@keyframes outer-left {
+  from {
+    transform: translateX(50%);
+  }
+  to {
+    transform: none;
+  }
 }
 h1 {
   font-family: Lobster;
   font-size: 160px;
-  color: rgb(128, 96, 14);
-  text-shadow: 6px 4px #651b79;
-
+  color: rgb(182, 137, 25);
+  letter-spacing: 6px;
   margin-left: 20px;
   padding: 20px;
-  border-radius: 300px 0px;
+  /* border-radius: 300px 0px;*/
 
-  box-shadow: 8px 22px darkslategray;
-  animation: glitter 3s alternate-reverse infinite;
+  /* box-shadow: 8px 22px darkslategray;*/
+  animation: glitter 3s alternate-reverse infinite, inner-left 2s 1s ease both,
+    text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
 }
+
 @keyframes glitter {
   0% {
     text-shadow: 0 0 1px darkslategray, 0 0 4px darkslategray;
@@ -87,28 +97,80 @@ h1 {
     text-shadow: 0 0 20px rgb(241, 187, 48), 0 0 16px rgb(241, 187, 48);
   }
 }
+@keyframes inner-left {
+  from {
+    transform: translateX(-110%);
+  }
+  to {
+    transform: none;
+  }
+}
+@keyframes text-clip {
+  from {
+    clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+  }
+  to {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
 h3 {
   color: darkslategray;
   text-shadow: 1px 2px rgb(40, 57, 57);
   font-family: Poppins;
   font-weight: 700;
   text-align: center;
-  margin-top: -60px;
+  margin-top: -100px;
+  letter-spacing: 1px;
 }
 h3 a {
   text-decoration: none;
-  color: #791b73;
+  color: rgb(218, 204, 166);
   margin-right: 10px;
   margin-left: 10px;
 }
 h3 a:hover {
-  color: #b69823;
+  color: rgb(151, 116, 29);
 }
 p {
-
-  padding: 60px;
+  padding: 40px 70px;
+  text-align: justify;
   font-family: Poppins;
-  font-weight: 500;
+  font-weight: 700;
+  color: darkslategray;
+  line-height: 2;
+  margin-left: 60px;
+}
+.brown {
+  margin-left: -80px;
+  font-family: Lobster;
+  color: rgb(218, 204, 166);
+  font-size: 90px;
+  letter-spacing: 50px;
+  text-shadow: 3px 6px rgb(40, 57, 57);
+}
+.james {
+  display: block;
+  text-align: center;
+  font-family: Lobster;
+  color: rgb(218, 204, 166);
+  font-size: 90px;
+  letter-spacing: 90px;
+  text-shadow: 3px 6px rgb(40, 57, 57);
+}
+.second-p {
+  margin-left: 0px;
+}
+.brown-two {
+  display: block;
+  text-align: right;
+  font-family: Lobster;
+  color: rgb(218, 204, 166);
+  font-size: 90px;
+  letter-spacing: 50px;
+  text-shadow: 3px 6px rgb(40, 57, 57);
+}
+.third-p {
+  margin-right: 0px;
 }
 .container {
   display: grid;
@@ -123,7 +185,21 @@ p {
 .valagala {
   margin-bottom: -10px;
 }
+.top-star i {
+  font-size: 33px;
+  color: #370941;
+  opacity: 0.6;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 4;
+}
 footer {
   z-index: 3;
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  font-family: monospace;
+  opacity: 0.7;
+  letter-spacing: 2px;
 }
