--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .overlay {
   width: 100%;
   position: absolute;
-  margin-top: 860px;
+  margin-top: 940px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -119,7 +119,8 @@ h3 {
   font-family: Poppins;
   font-weight: 700;
   text-align: center;
-  margin-top: -100px;
+  margin-top: -120px;
+  margin-bottom: -200px;
   letter-spacing: 1px;
 }
 h3 a {
@@ -131,6 +132,13 @@ h3 a {
 h3 a:hover {
   color: rgb(151, 116, 29);
 }
+.brown-spotify {
+  margin-top: 340px;
+}
+
+.spotify {
+  margin-left: 80px;
+}
 p {
   padding: 40px 70px;
   text-align: justify;
@@ -141,7 +149,7 @@ p {
   margin-left: 60px;
 }
 .brown {
-  margin-left: -80px;
+  margin-left: 80px;
   font-family: Lobster;
   color: rgb(218, 204, 166);
   font-size: 90px;
@@ -154,7 +162,7 @@ p {
   font-family: Lobster;
   color: rgb(218, 204, 166);
   font-size: 90px;
-  letter-spacing: 90px;
+  letter-spacing: 180px;
   text-shadow: 3px 6px rgb(40, 57, 57);
 }
 .second-p {
